--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -10,7 +10,8 @@
 }
 
 .bghom{
-    background-image:   url("./../bghom.jpg");
+    background: #000824;
+    /* background-image:   url("./../bghom.jpg"); */
 }
 .bghom2{
     background: #ffffffd2 !important;
